@@ -4,6 +4,10 @@ python-debian (0.1.12) UNRELEASED; urgency=low
   * Add initial support to deb822 for gpg signature checking (Closes: #485829)
   * Suggest gpgv for signature checking
 
+  [ Stefano Zacchiroli ]
+  * deb822: add support for pretty printing structured inter-package
+    relationships (and relevant tests)
+
  -- John Wright <jsw@debian.org>  Sat, 09 Aug 2008 17:15:34 -0600
 
 python-debian (0.1.11) unstable; urgency=low
